feat: oauth项目合并到sso，重构项目结构